documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P71W32API ERRVAL __stdcall PC708_RTReset(INT taval,HCARD handleval);

P71W32API USHORT __stdcall PC708_RTStatus(INT taval,HCARD handleval);

P71W32API USHORT __stdcall PC708_RTSWDRd(INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_RTSWDWr(USHORT swdval,INT taval,HCARD handleval);

P71W32API USHORT __stdcall PC708_SARRdW(USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_SARWrW(USHORT value,USHORT addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedBuildEx(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,LPUSHORT period,LPVOID buf,USHORT bufsize,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedBuildExx(ULONG frametime,USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT period,LPVOID buf,USHORT bufsize,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedCalc(LPMSGADDR msgaddr,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedInsEnd(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedInsMsg(USHORT index,LPMSGADDR msgaddr,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedInsStart(ULONG frametime,USHORT count,HCARD handleval);

P71W32API USHORT __stdcall PC708_SchedMaxval(LPUSHORT array,USHORT arraycount);

P71W32API USHORT __stdcall PC708_SchedMinval(LPUSHORT array,USHORT arraycount);

P71W32API ULONG __stdcall PC708_Shl(ULONG dataval,USHORT cntval);

P71W32API ULONG __stdcall PC708_Shr(ULONG dataval,USHORT cntval);

P71W32API VOID __stdcall PC708_TimerClear(HCARD handleval);

P71W32API ULONG __stdcall PC708_TimerRd(HCARD handleval);

P71W32API INT __stdcall PC708_TimerResolution(INT timerresol,HCARD handleval);

P71W32API USHORT __stdcall PC708_TimerResolutionEx(USHORT timershift,HCARD handleval);

P71W32API INT __stdcall PC708_ValAsciiCmpi(LPSTR str1,LPSTR str2);

P71W32API LPSTR __stdcall PC708_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

P71W32API VOID __stdcall PC708_ValAsciiTrimLead(LPSTR buf);

P71W32API VOID __stdcall PC708_ValAsciiTrimTrail(LPSTR buf);

P71W32API ULONG __stdcall PC708_ValFromAscii(LPCSTR asciistr,INT radixval);

P71W32API USHORT __stdcall PC708_ValGetBits(USHORT oldvalue,INT startbit,INT endbit);

P71W32API LPSTR __stdcall PC708_ValIncAscii(LPSTR asciistr);

P71W32API LPSTR __stdcall PC708_ValInccAscii(LPSTR asciistr);

P71W32API BOOL __stdcall PC708_ValIsLower(INT value);

P71W32API INT __stdcall PC708_ValLenAscii(INT numbits,INT radixval);

P71W32API USHORT __stdcall PC708_ValPackCWD(INT TAval,INT TRflag,INT SAval,INT WCval);

P71W32API USHORT __stdcall PC708_ValPackRTCWD(INT MCflag,INT TAval,INT TRflag,INT SAval,INT count);

P71W32API USHORT __stdcall PC708_ValPutBits(USHORT oldvalue,USHORT newfld,INT startbit,INT endbit);

P71W32API LPSTR __stdcall PC708_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

P71W32API INT __stdcall PC708_ValToUpper(INT value);

P71W32API VOID __stdcall PC708_ValUnpackCWD(USHORT CWDval,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT WCval);

P71W32API VOID __stdcall PC708_ValUnpackRTCWD(USHORT cwd,LPINT BCASTflag,LPINT MCflag,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT count);

P71W32API ERRVAL __stdcall PC708_XmtAlloc(USHORT framecount,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtConfigExxx(ULONG bcconfigval,ULONG msgconfigval,USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);

P71W32API USHORT __stdcall PC708_XmtCountRd(HCARD handleval);

P71W32API VOID __stdcall PC708_XmtCountWr(USHORT countval,HCARD handleval);

P71W32API USHORT __stdcall PC708_XmtDataCountRd(HCARD handleval);

P71W32API VOID __stdcall PC708_XmtDataCountWr(USHORT countval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtFreq(USHORT framefreq,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtFreqEx(USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);