documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.CS

        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RTReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RTReset(Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RTStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_RTStatus(Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RTSWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_RTSWDRd(Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RTSWDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RTSWDWr(UInt16 swdval, Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SARRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_SARRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SARWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_SARWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SchedBuild@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_SchedBuild(UInt16 nummsgs, ref UInt32 msgaddr, ref UInt16 freq, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SchedBuildEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_SchedBuildEx(UInt16 nummsgs, ref UInt32 msgaddr, ref UInt16 freq, ref UInt16 period, IntPtr buf, UInt16 bufsize, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SchedBuildExx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_SchedBuildExx(UInt32 frametime, UInt16 nummsgs, ref UInt32 msgaddr, ref UInt16 period, IntPtr buf, UInt16 bufsize, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SchedCalc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_SchedCalc(ref UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SchedInsEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_SchedInsEnd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SchedInsMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_SchedInsMsg(UInt16 index, ref UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SchedInsStart@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_SchedInsStart(UInt32 frametime, UInt16 count, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SchedMaxval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_SchedMaxval(ref UInt16 arrayval, UInt16 arrayvalcount);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_SchedMinval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_SchedMinval(ref UInt16 arrayval, UInt16 arrayvalcount);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_Shl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_Shl(UInt32 dataval, UInt16 cntval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_Shr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_Shr(UInt32 dataval, UInt16 cntval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_TimerClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_TimerClear(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_TimerRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_TimerRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_TimerResolution@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_TimerResolution(Int32 timerresol, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_TimerResolutionEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_TimerResolutionEx(UInt16 timershift, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValAsciiCmpi@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ValAsciiCmpi(ref string str1, ref string str2);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValAsciiCpy@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _PC708_ValAsciiCpy(ref string strdest, ref string strsrc, Int32 count);
        public static string PC708_ValAsciiCpy(ref string strdest, ref string strsrc, Int32 count) { return Marshal.PtrToStringAnsi(_PC708_ValAsciiCpy(ref strdest, ref strsrc, count)); }
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValAsciiTrimLead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_ValAsciiTrimLead(ref string buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValAsciiTrimTrail@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_ValAsciiTrimTrail(ref string buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValFromAscii@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_ValFromAscii(ref string asciistr, Int32 radixval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValGetBits@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_ValGetBits(UInt16 oldvalue, Int32 startbit, Int32 endbit);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValIncAscii@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _PC708_ValIncAscii(ref string asciistr);
        public static string PC708_ValIncAscii(ref string asciistr) { return Marshal.PtrToStringAnsi(_PC708_ValIncAscii(ref asciistr)); }
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValInccAscii@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _PC708_ValInccAscii(ref string asciistr);
        public static string PC708_ValInccAscii(ref string asciistr) { return Marshal.PtrToStringAnsi(_PC708_ValInccAscii(ref asciistr)); }
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValIsLower@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ValIsLower(Int32 value);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValLenAscii@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ValLenAscii(Int32 numbits, Int32 radixval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValPackCWD@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_ValPackCWD(Int32 taval, Int32 trflag, Int32 saval, Int32 wcval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValPackRTCWD@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_ValPackRTCWD(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 count);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValPutBits@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_ValPutBits(UInt16 oldvalue, UInt16 newfld, Int32 startbit, Int32 endbit);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValToAscii@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _PC708_ValToAscii(UInt32 value, ref string asciistr, Int32 numbits, Int32 radixval);
        public static string PC708_ValToAscii(UInt32 value, ref string asciistr, Int32 numbits, Int32 radixval) { return Marshal.PtrToStringAnsi(_PC708_ValToAscii(value, ref asciistr, numbits, radixval)); }
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValToUpper@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ValToUpper(Int32 value);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValUnpackCWD@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_ValUnpackCWD(UInt16 cwdval, ref Int32 taval, ref Int32 trflag, ref Int32 saval, ref Int32 wcval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ValUnpackRTCWD@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_ValUnpackRTCWD(UInt16 cwd, ref Int32 bcastflag, ref Int32 mcflag, ref Int32 taval, ref Int32 trflag, ref Int32 saval, ref Int32 count);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtAlloc(UInt16 framecount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtConfigExxx@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtConfigExxx(UInt32 bcconfigval, UInt32 msgconfigval, UInt16 framefreq, UInt16 intfreq, UInt16 framecount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_XmtCountRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_XmtCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtDataCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_XmtDataCountRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtDataCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_XmtDataCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtFreq@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtFreq(UInt16 framefreq, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtFreqEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtFreqEx(UInt16 framefreq, UInt16 intfreq, UInt16 framecount, UInt32 handleval);
